@@ -1,3 +1,16 @@
-#undef PACKAGE_DATA_DIR
+#undef ENLIGHTENMENT_VERSION
+#undef ENLIGHTENMENT_MAJOR
+#undef ENLIGHTENMENT_MINOR
+#undef ENLIGHTENMENT_MICRO
+#undef ENABLE_NLS
+#undef HAVE_CATGETS
+#undef HAVE_GETTEXT
+#undef HAVE_LC_MESSAGES
+#undef HAVE_STPCPY
+#undef HAVE_LIBSM
 #undef PACKAGE_LOCALE_DIR
+#undef PACKAGE_DATA_DIR
 #undef PACKAGE_SOURCE_DIR
+#undef PACKAGE_BIN_DIR
+#undef PACKAGE_LIB_DIR
+#undef USE_FERITE
