@@ -1,6 +1,6 @@
 ## Process this file with automake to produce Makefile.in
 
-INCLUDES = @ebits_cflags@ @ecore_cflags@ @edb_cflags@ @evas_cflags@ @ewd_cflags@ @etox_cflags@ @imlib2_cflags@
+INCLUDES = @ebits_cflags@ @ecore_cflags@ @edb_cflags@ @evas_cflags@ @ewd_cflags@ @etox_cflags@
 
 lib_LTLIBRARIES = libewl.la
 
@@ -66,5 +66,5 @@ libewl_la_SOURCES = \
 	getopt.c \
 	getopt1.c
 
-libewl_la_LIBADD = @ebits_libs@ @ecore_libs@ @edb_libs@ @evas_libs@ @ewd_libs@ @etox_libs@ @imlib2_libs@ -lm
+libewl_la_LIBADD = @ebits_libs@ @ecore_libs@ @edb_libs@ @evas_libs@ @ewd_libs@ @etox_libs@ -lm
 libewl_la_LDFLAGS = -version-info 0:0:0
